clean code  and Layout issues fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-
 mat-toolbar-row {
   justify-content: space-around;
 }
@@ -21,3 +20,12 @@ mat-toolbar-row {
   flex: 1 1 auto;
 }
 
+.example-headers-align .mat-expansion-panel-header-title,
+.example-headers-align .mat-expansion-panel-header-description {
+  flex-basis: 0;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
